tonghop23
bash

node --check /home/claude/create_doc2.js 2>&1
Output

/home/claude/create_doc2.js:250
    ]
    ^

SyntaxError: Unexpected token ']'
    at wrapSafe (node:internal/modules/cjs/loader:1637:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v22.22.2
Done

You are out of free messages until 4:10 PM